--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,14 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7064950429:AAFHo_AQ7rSdAUTe2cUyIRP7woIxNxW6vOY"                              # Require restart after changing it while bot running
+OWNER_ID = "5213073489"                               # Require restart after changing it while bot running
+TELEGRAM_API = "24335028"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "b204ec833fb451fb913fc8e683b232d0"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://aadarshkumar1234768:Q8ptH5spkMkR93eg@cluster0.0ntbfcn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
