--- a/config_sample.env
+++ b/config_sample.env
@@ -1,5 +1,3 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
 BOT_TOKEN = "7064950429:AAFHo_AQ7rSdAUTe2cUyIRP7woIxNxW6vOY"                              # Require restart after changing it while bot running
 OWNER_ID = "5213073489"                               # Require restart after changing it while bot running
@@ -11,8 +9,8 @@ USER_SESSION_STRING = ""                    # Require restart after changing it 
 DATABASE_URL = "mongodb+srv://aadarshkumar1234768:Q8ptH5spkMkR93eg@cluster0.0ntbfcn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1002391695336"                       # Require restart after changing it while bot running
+SUDO_USERS = "5213073489"                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
@@ -26,7 +24,7 @@ FSUB_IDS = ""
 BOT_PM = ""
 
 # GDrive Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "1T0SRUPozs0qRK7x2sJ6pp9nCbyzij-DE?usp"
 USER_TD_MODE = ""
 USER_TD_SA = ""
 INDEX_URL = ""
@@ -95,8 +93,8 @@ MEGA_EMAIL = ""
 MEGA_PASSWORD = ""
 
 # Limits
-DAILY_TASK_LIMIT = ""
-DAILY_MIRROR_LIMIT = ""
+DAILY_TASK_LIMIT = "20"
+DAILY_MIRROR_LIMIT = "10"
 DAILY_LEECH_LIMIT = ""
 USER_MAX_TASKS = ""
 BOT_MAX_TASKS = ""
